[fix]: controller 코드컨벤션 수정(#452)