@@ -1,6 +1,9 @@
 package com.rental.shinhan.controller;
 
-import com.rental.shinhan.dto.*;
+import com.rental.shinhan.dto.CustomerDTO;
+import com.rental.shinhan.dto.OrderJoinDTO;
+import com.rental.shinhan.dto.ProductDTO;
+import com.rental.shinhan.dto.ReviewDTO;
 import com.rental.shinhan.service.AdminService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
@@ -14,8 +17,8 @@ import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 
 @Controller
@@ -34,14 +37,10 @@ public class AdminController {
     @ResponseBody
     public Page<ProductDTO> getProducts(@RequestParam(defaultValue = "0") int page,
                                         @RequestParam(defaultValue = "10") int size,
-                                        @RequestParam(defaultValue = "") String searchKeyWord , Model model) {
-        try {
-            searchKeyWord = URLDecoder.decode(searchKeyWord, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            e.printStackTrace();
-        }
+                                        @RequestParam(defaultValue = "") String searchKeyWord, Model model) {
+        searchKeyWord = URLDecoder.decode(searchKeyWord, StandardCharsets.UTF_8);
         Pageable pageable = PageRequest.of(page, size);
-        Page<ProductDTO> products = adminService.findProducts(pageable,searchKeyWord);
+        Page<ProductDTO> products = adminService.findProducts(pageable, searchKeyWord);
         return products;
     }
 
@@ -55,8 +54,7 @@ public class AdminController {
     public Page<ReviewDTO> getReviews(
             @RequestParam(defaultValue = "0") int page,
             @RequestParam(defaultValue = "10") int size,
-            @RequestParam(defaultValue = "0") int rating)
-    {
+            @RequestParam(defaultValue = "0") int rating) {
         Pageable pageable = PageRequest.of(page, size);
         Page<ReviewDTO> reviews = adminService.findReviews(pageable, rating);
         return reviews;
@@ -73,6 +71,7 @@ public class AdminController {
             @RequestParam(defaultValue = "0") int page,
             @RequestParam(defaultValue = "10") int size
     ) {
+
         Pageable pageable = PageRequest.of(page, size);
         Page<CustomerDTO> customers = adminService.findCustomers(pageable);
         return customers;
@@ -89,6 +88,7 @@ public class AdminController {
             @RequestParam(defaultValue = "0") int page,
             @RequestParam(defaultValue = "10") int size
     ) {
+
         Pageable pageable = PageRequest.of(page, size);
         Page<OrderJoinDTO> orders = adminService.findOrders(pageable);
         return orders;
@@ -96,16 +96,19 @@ public class AdminController {
 
     @PostMapping("/{productSeq}/delete")
     public String deleteProduct(@PathVariable int productSeq) {
-        int result = adminService.removeProduct(productSeq);
+
+        adminService.removeProduct(productSeq);
+
         return "redirect:/admin/product/list";
     }
 
     @ResponseBody
-    @PostMapping(value = "/product/add",consumes = {MediaType.MULTIPART_FORM_DATA_VALUE, MediaType.APPLICATION_JSON_VALUE})
+    @PostMapping(value = "/product/add", consumes = {MediaType.MULTIPART_FORM_DATA_VALUE, MediaType.APPLICATION_JSON_VALUE})
     public ResponseEntity<String> addProduct(
-            @RequestPart(value= "product") ProductDTO product,
+            @RequestPart(value = "product") ProductDTO product,
             @RequestPart(value = "imgUrl", required = false) List<MultipartFile> images
-            ) {
+    ) {
+
         try {
             adminService.addProduct(images, product);
             return ResponseEntity.ok("Product added successfully");
@@ -116,6 +119,7 @@ public class AdminController {
 
     @GetMapping("/product/add")
     public String addProduct() {
+
         return "/admin/productAdd";
     }
 }
